--- a/Copy to SD Card root directory to update/config.ini
+++ b/Copy to SD Card root directory to update/config.ini
@@ -26,7 +26,7 @@ unified_menu:0
 
 #### Baudrate
 # Options: [2400: 0, 9600: 1, 19200: 2, 38400: 3, 57600: 4, 115200: 5, 250000: 6, 500000: 7, 1000000: 8]
-baudrate:5
+baudrate:6
 
 #### Default Touch Mode Language
 # Select the language to display on the LCD while in Touch Mode.
@@ -34,7 +34,7 @@ baudrate:5
 #            GERMAN: 5,    CZECH: 6,    SPAIN: 7,    FRENCH: 8,  PORTUGUESE: 9,
 #           ITALIAN: 10,  POLISH: 11,  SLOVAK: 12,    DUTCH: 13,  HUNGARIAN: 14,
 #           TURKISH: 15,   GREEK: 16]
-language:0
+language:5
 
 #### Default Touch Mode Color Options
 # Options: [ WHITE: 0,  BLACK: 1,  RED: 2,  GREEN: 3,      BLUE: 4,       CYAN: 5,  MAGENTA: 6,    YELLOW: 7,
@@ -95,32 +95,32 @@ files_list_mode:1
 
 #### Default Mode
 # Options: [0:Touch Mode, 1: Marlin Mode]
-default_mode:0
+default_mode:1
 
 #### Keep Serial Always ON
 # Keep UART (Serial communication) alive in Marlin Mode
 # Allow seamless OctoPrint UART connection to the TFT's UART/serial expansion port no matter which mode the TFT is in.
 # Options: [0: Disabled, 1: Enabled]
-serial_always_on:0
+serial_always_on:1
 
 #### Default Marlin Mode Background & Font Color Options
 # Options: [ WHITE: 0,  BLACK: 1,  RED: 2,  GREEN: 3,      BLUE: 4,       CYAN: 5,  MAGENTA: 6,    YELLOW: 7,
 #           ORANGE: 8, PURPLE: 9, LIME: 10, BROWN: 11, DARKBLUE: 12, DARKGREEN: 13,    GRAY: 14, DARKGRAY: 15]
 # Or set the color(RGB888 format) hex value directly(start with “0x”).
 # Such as: 0xFF0000 : Red, 0x00FF00 : Green, 0x0000FF : Blue
-marlin_bg_color:1
-marlin_fn_color:8
+marlin_bg_color:2
+marlin_fn_color:0
 
 #### Marlin Mode show title
 # Options: [enable: 1, disable: 0]
-marlin_show_title:1
+marlin_show_title:0
 
 # Run Marlin Mode in Fullscreen
 # Options: [enable: 1, disable: 0] [Disabled. RECOMMENDED FOR TFT24]
-marlin_fullscreen:0
+marlin_fullscreen:1
 
 #### Text displayed at the top of the TFT in Marlin Mode.
-marlin_title:LCD12864 Simulator
+marlin_title:4MAX-SKR 1.4 Pro
 
 
 #--------------------------------------------------------------------
@@ -310,7 +310,7 @@ buzzer:1
 
 #### Knob Led Color (only for TFT35 E3.0)
 #Options: [LED_OFF: 0, LED_WHITE: 1, LED_RED: 2, LED_ORANGE: 3, LED_YELLOW: 4, LED_GREEN: 5, LED_BLUE: 6, LED_INDIGO: 7, LED_VIOLET: 8]
-knob_led_color:0
+knob_led_color:2
 
 #### Default LCD Brightness levels (only for TFT35v3.0 & TFT28v3.0)
 # Options: [(low) 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 (full)]
