Custom short firmware name

--- a/platformio.ini
+++ b/platformio.ini
@@ -51,6 +51,10 @@ build_flags = -fmax-errors=5
   -ITFT/src/User/Hal/STM32_USB_HOST_Library/Usr/inc
   -ITFT/src/User/Hal/STM32_USB_OTG_Driver/inc
   -DSOFTWARE_VERSION=26.x
+  -DSOFTWARE_VERSION_SHORT=26
+extra_scripts = post:buildroot/scripts/short_out_filename.py
+  pre:buildroot/scripts/custom_filename.py
+
 
 [stm32f10x]
 default_src_filter = ${common.default_src_filter} +<src/Libraries/cmsis/stm32f10x> +<src/Libraries/fwlib/stm32f10x> +<src/User/Hal/stm32f10x>
@@ -87,7 +91,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_hd>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x6000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_HD=
@@ -105,7 +109,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_hd>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x6000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_HD=
@@ -123,7 +127,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_hd>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x6000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_HD=
@@ -141,7 +145,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_hd>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x3000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_HD=
@@ -160,7 +164,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f2xx.default_src_filter} +<src/Libraries/Startup/stm32f2xx>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f2xx_0x8000_iap.py
 build_flags   = ${stm32f2xx.build_flags}
   -DSTM32F2XX=
@@ -178,13 +182,15 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f2xx.default_src_filter} +<src/Libraries/Startup/stm32f2xx>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f2xx_0x8000_iap.py
+                
 build_flags   = ${stm32f2xx.build_flags}
   -DSTM32F2XX=
   -DHSE_VALUE=8000000ul
   -DVECT_TAB_FLASH=0x08008000
   -DHARDWARE="BIGTREE_TFT35_V3.0_E3"
+  -DHARDWARE_SHORT="35V3E3"
   -DTFT35_E3_V3_0=
 
 #
@@ -196,7 +202,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f2xx.default_src_filter} +<src/Libraries/Startup/stm32f2xx>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f2xx_0x8000_iap.py
 build_flags   = ${stm32f2xx.build_flags}
   -DSTM32F2XX=
@@ -214,7 +220,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f2xx.default_src_filter} +<src/Libraries/Startup/stm32f2xx>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f2xx_0x8000_iap.py
 build_flags   = ${stm32f2xx.build_flags}
   -DSTM32F2XX=
@@ -232,7 +238,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f4xx.default_src_filter} +<src/Libraries/Startup/stm32f40_41x>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f4xx_0x8000_iap.py
 build_flags   = ${stm32f4xx.build_flags}
   -DSTM32F40_41xxx=
@@ -250,7 +256,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_hd>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x6000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_HD=
@@ -268,7 +274,7 @@ framework     = stm32cube
 board         = STM32F103VC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f2xx.default_src_filter} +<src/Libraries/Startup/stm32f2xx>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f2xx_0x8000_iap.py
 build_flags   = ${stm32f2xx.build_flags}
   -DSTM32F2XX=
@@ -286,7 +292,7 @@ framework     = stm32cube
 board         = STM32F105RC
 upload_protocol = cmsis-dap
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_cl>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x6000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_CL=
@@ -305,7 +311,7 @@ board         = STM32F107VC
 upload_protocol = stlink
 debug_tool = stlink
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_cl>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x7000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_CL=
@@ -324,7 +330,7 @@ board         = STM32F107VC
 upload_protocol = stlink
 debug_tool = stlink
 src_filter    = ${stm32f10x.default_src_filter} +<src/Libraries/Startup/stm32f10x_cl>
-extra_scripts = pre:buildroot/scripts/custom_filename.py
+extra_scripts = ${common.extra_scripts}
                 buildroot/scripts/stm32f10x_0x0000_iap.py
 build_flags   = ${stm32f10x.build_flags}
   -DSTM32F10X_CL=
